--- a/zeru.html
+++ b/zeru.html
@@ -12,7 +12,7 @@
     <nav> 
     <h1>zeru</h1>
     <ul> 
-    <li><a href="zeru.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         </ul>
     </nav>
