--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <nav> 
         <h1>zeru</h1>
     <ul> 
-        <li><a href="zeru.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         
     </ul>
